--- a/src/main/resources/views/dbWorkViews/fuelParametersAdd.fxml
+++ b/src/main/resources/views/dbWorkViews/fuelParametersAdd.fxml
@@ -12,8 +12,8 @@
             <String fx:value="button_restyling" />
             <String fx:value="button_restyling_bounds" />
          </styleClass></Button>
-      <TextField fx:id="name" blendMode="MULTIPLY" layoutX="14.0" layoutY="42.0" prefHeight="41.0" prefWidth="239.0" styleClass="button_restyling_bounds" stylesheets="@../../styles/styles.css" />
-      <TextField fx:id="price" blendMode="MULTIPLY" layoutX="14.0" layoutY="81.0" prefHeight="41.0" prefWidth="239.0" styleClass="button_restyling_bounds" stylesheets="@../../styles/styles.css" />
+      <TextField fx:id="name" blendMode="MULTIPLY" layoutX="14.0" layoutY="42.0" prefHeight="41.0" prefWidth="239.0" promptText="Введите вид топлива..." styleClass="button_restyling_bounds" stylesheets="@../../styles/styles.css" />
+      <TextField fx:id="price" blendMode="MULTIPLY" layoutX="14.0" layoutY="81.0" prefHeight="41.0" prefWidth="239.0" promptText="Введите цену..." styleClass="button_restyling_bounds" stylesheets="@../../styles/styles.css" />
       <AnchorPane cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="226.0" styleClass="close_area" stylesheets="@../../styles/styles.css">
          <children>
             <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
