--- a/src/main/resources/views/constructor.fxml
+++ b/src/main/resources/views/constructor.fxml
@@ -4,121 +4,55 @@
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="anchorPane" maxWidth="-Infinity" prefHeight="500.0" prefWidth="900.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ConstructorController">
       <children>
-         <Button layoutX="14.0" layoutY="41.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="Создать топологию" wrapText="true">
-            <font>
-               <Font name="Constantia" size="17.0" />
-            </font>
-         <styleClass>
-            <String fx:value="button_restyling" />
-            <String fx:value="button_restyling_bounds" />
-         </styleClass>
-         </Button>
-         <Button layoutX="14.0" layoutY="81.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="Проверка корректности" wrapText="true">
-            <font>
-               <Font size="17.0" />
-            </font>
-         <styleClass>
-            <String fx:value="button_restyling" />
-            <String fx:value="button_restyling_bounds" />
-         </styleClass></Button>
-         <Button layoutX="14.0" layoutY="121.0" mnemonicParsing="false" onAction="#createModeller" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="Перейти к моделированию" wrapText="true">
-            <font>
-               <Font size="17.0" />
-            </font>
-         <styleClass>
-            <String fx:value="button_restyling" />
-            <String fx:value="button_restyling_bounds" />
-         </styleClass></Button>
-         <Line endX="-47.0" endY="310.0" layoutX="267.0" layoutY="190.0" startX="-47.0" startY="-190.0" />
-         <Line endX="86.0" endY="315.0" layoutX="633.0" layoutY="185.0" startX="86.0" startY="-186.0" />
-         <Label layoutX="766.0" layoutY="50.0" styleClass="text" stylesheets="@../styles/styles.css" text="ЭЛЕМЕНТЫ">
-            <font>
-               <Font size="17.0" />
-            </font>
-         </Label>
-         <Label layoutX="821.0" layoutY="98.0" styleClass="text" stylesheets="@../styles/styles.css" text="-ВЪЕЗД">
-            <font>
-               <Font size="17.0" />
-            </font>
-         </Label>
-         <Label layoutX="821.0" layoutY="188.0" styleClass="text" stylesheets="@../styles/styles.css" text="-ВЫЕЗД">
-            <font>
-               <Font size="17.0" />
-            </font>
-         </Label>
-         <Label layoutX="821.0" layoutY="278.0" styleClass="text" stylesheets="@../styles/styles.css" text="-КАССА">
-            <font>
-               <Font size="17.0" />
-            </font>
-         </Label>
-         <Label layoutX="821.0" layoutY="368.0" styleClass="text" stylesheets="@../styles/styles.css" text="-ТРК">
-            <font>
-               <Font size="16.0" />
-            </font>
-         </Label>
-         <Label layoutX="821.0" layoutY="458.0" styleClass="text" stylesheets="@../styles/styles.css" text="-ТБ">
-            <font>
-               <Font size="17.0" />
-            </font>
-         </Label>
-      <ImageView fx:id="petrolStation" fitHeight="50.0" fitWidth="50.0" layoutX="751.0" layoutY="353.0" onDragDetected="#petrolStationOnDragDetectedEvent" onDragOver="#petrolStationOnDragOverEvent" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../pics/sprites.png" />
-         </image>
-         <viewport>
-            <Rectangle2D height="50.0" minY="150.0" width="50.0" />
-         </viewport>
-      </ImageView>
-      <ImageView fx:id="fuelTank" fitHeight="50.0" fitWidth="50.0" layoutX="751.0" layoutY="443.0" onDragDetected="#fuelTankOnDragDetectedEvent" onDragOver="#fuelTankOnDragOverEvent" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../pics/sprites.png" />
-         </image>
-         <viewport>
-            <Rectangle2D height="50.0" minX="50.0" minY="150.0" width="50.0" />
-         </viewport>
-      </ImageView>
-      <ImageView fx:id="cashBox" fitHeight="50.0" fitWidth="50.0" layoutX="751.0" layoutY="263.0" onDragDetected="#cashBoxOnDragDetectedEvent" onDragOver="#cashBoxOnDragOverEvent" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../pics/sprites.png" />
-         </image>
-         <viewport>
-            <Rectangle2D height="50.0" minX="100.0" minY="150.0" width="50.0" />
-         </viewport>
-      </ImageView>
-      <ImageView fx:id="exit" fitHeight="50.0" fitWidth="50.0" layoutX="751.0" layoutY="173.0" onDragDetected="#exitOnDragDetectedEvent" onDragOver="#exitOnDragOverEvent" onMouseClicked="#exitOnMouseClicked" pickOnBounds="true" preserveRatio="true" rotate="180.0">
-         <image>
-            <Image url="@../pics/sprites.png" />
-         </image>
-         <viewport>
-            <Rectangle2D height="50.0" minX="200.0" minY="200.0" width="50.0" />
-         </viewport>
-      </ImageView>
-      <ImageView fx:id="entry" fitHeight="50.0" fitWidth="50.0" layoutX="751.0" layoutY="83.0" onDragDetected="#entryOnDragDetectedEvent" onDragOver="#entryOnDragOverEvent" onMouseClicked="#entryOnMouseClicked" pickOnBounds="true" preserveRatio="true" rotate="180.0">
-         <image>
-            <Image url="@../pics/sprites.png" />
-         </image>
-         <viewport>
-            <Rectangle2D height="50.0" minX="200.0" minY="200.0" width="50.0" />
-         </viewport>
-      </ImageView>
-      <Button fx:id="startButton" layoutX="14.0" layoutY="161.0" mnemonicParsing="false" onAction="#startModelling" prefHeight="26.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="Запуск" wrapText="true">
-         <font>
-            <Font size="17.0" />
-         </font>
-         <styleClass>
-            <String fx:value="button_restyling" />
-            <String fx:value="button_restyling_bounds" />
-         </styleClass>
-      </Button>
-      <AnchorPane cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="900.0" styleClass="close_area" stylesheets="@../styles/styles.css">
+      <AnchorPane fx:id="buttons" layoutX="14.0" layoutY="71.0" prefHeight="150.0" prefWidth="200.0">
+         <children>
+               <Button mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="Создать топологию" wrapText="true">
+                  <font>
+                     <Font name="Constantia" size="17.0" />
+                  </font>
+               <styleClass>
+                  <String fx:value="button_restyling" />
+                  <String fx:value="button_restyling_bounds" />
+               </styleClass>
+               </Button>
+               <Button layoutY="40.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="Проверка корректности" wrapText="true">
+                  <font>
+                     <Font size="17.0" />
+                  </font>
+               <styleClass>
+                  <String fx:value="button_restyling" />
+                  <String fx:value="button_restyling_bounds" />
+               </styleClass>
+            </Button>
+               <Button layoutY="80.0" mnemonicParsing="false" onAction="#createModeller" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="Перейти к моделированию" wrapText="true">
+                  <font>
+                     <Font size="17.0" />
+                  </font>
+               <styleClass>
+                  <String fx:value="button_restyling" />
+                  <String fx:value="button_restyling_bounds" />
+               </styleClass>
+            </Button>
+            <Button fx:id="startButton" layoutY="120.0" mnemonicParsing="false" onAction="#startModelling" prefHeight="26.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="Запуск" wrapText="true">
+               <font>
+                  <Font size="17.0" />
+               </font>
+               <styleClass>
+                  <String fx:value="button_restyling" />
+                  <String fx:value="button_restyling_bounds" />
+               </styleClass>
+            </Button>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="dragableArea" cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="900.0" styleClass="close_area" stylesheets="@../styles/styles.css">
          <children>
             <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
                <font>
@@ -127,4 +61,82 @@
             </Button>
          </children>
       </AnchorPane>
+      <ScrollPane fx:id="scrollPaneElements" blendMode="MULTIPLY" layoutX="735.0" layoutY="71.0" prefHeight="322.0" prefWidth="166.0">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="376.0" prefWidth="147.0">
+               <children>
+                  <ImageView fx:id="entry" fitHeight="50.0" fitWidth="50.0" layoutX="15.0" layoutY="53.0" onDragDetected="#entryOnDragDetectedEvent" onDragOver="#entryOnDragOverEvent" onMouseClicked="#entryOnMouseClicked" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../pics/sprites.png" />
+                     </image>
+                     <viewport>
+                        <Rectangle2D height="50.0" minX="200.0" minY="200.0" width="50.0" />
+                     </viewport>
+                  </ImageView>
+                     <Label layoutX="81.0" layoutY="69.0" styleClass="text" stylesheets="@../styles/styles.css" text="-ВЪЕЗД">
+                        <font>
+                           <Font size="17.0" />
+                        </font>
+                     </Label>
+                     <Label layoutX="81.0" layoutY="139.0" styleClass="text" stylesheets="@../styles/styles.css" text="-ВЫЕЗД">
+                        <font>
+                           <Font size="17.0" />
+                        </font>
+                     </Label>
+                     <Label layoutX="81.0" layoutY="206.0" styleClass="text" stylesheets="@../styles/styles.css" text="-КАССА">
+                        <font>
+                           <Font size="17.0" />
+                        </font>
+                     </Label>
+                     <Label layoutX="81.0" layoutY="265.0" styleClass="text" stylesheets="@../styles/styles.css" text="-ТРК">
+                        <font>
+                           <Font size="16.0" />
+                        </font>
+                     </Label>
+                     <Label layoutX="81.0" layoutY="328.0" styleClass="text" stylesheets="@../styles/styles.css" text="-ТБ">
+                        <font>
+                           <Font size="17.0" />
+                        </font>
+                     </Label>
+                  <ImageView fx:id="petrolStation" fitHeight="50.0" fitWidth="50.0" layoutX="15.0" layoutY="249.0" onDragDetected="#petrolStationOnDragDetectedEvent" onDragOver="#petrolStationOnDragOverEvent" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../pics/sprites.png" />
+                     </image>
+                     <viewport>
+                        <Rectangle2D height="50.0" minY="150.0" width="50.0" />
+                     </viewport>
+                  </ImageView>
+                  <ImageView fx:id="fuelTank" fitHeight="50.0" fitWidth="50.0" layoutX="15.0" layoutY="312.0" onDragDetected="#fuelTankOnDragDetectedEvent" onDragOver="#fuelTankOnDragOverEvent" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../pics/sprites.png" />
+                     </image>
+                     <viewport>
+                        <Rectangle2D height="50.0" minX="50.0" minY="150.0" width="50.0" />
+                     </viewport>
+                  </ImageView>
+                  <ImageView fx:id="cashBox" fitHeight="50.0" fitWidth="50.0" layoutX="15.0" layoutY="190.0" onDragDetected="#cashBoxOnDragDetectedEvent" onDragOver="#cashBoxOnDragOverEvent" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../pics/sprites.png" />
+                     </image>
+                     <viewport>
+                        <Rectangle2D height="50.0" minX="100.0" minY="150.0" width="50.0" />
+                     </viewport>
+                  </ImageView>
+                  <ImageView fx:id="exit" fitHeight="50.0" fitWidth="50.0" layoutX="15.0" layoutY="123.0" onDragDetected="#exitOnDragDetectedEvent" onDragOver="#exitOnDragOverEvent" onMouseClicked="#exitOnMouseClicked" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../pics/sprites.png" />
+                     </image>
+                     <viewport>
+                        <Rectangle2D height="50.0" minX="200.0" minY="200.0" width="50.0" />
+                     </viewport>
+                  </ImageView>
+                     <Label layoutX="43.0" layoutY="11.0" styleClass="text" stylesheets="@../styles/styles.css" text="ЭЛЕМЕНТЫ">
+                        <font>
+                           <Font size="17.0" />
+                        </font>
+                     </Label>
+               </children>
+            </AnchorPane>
+        </content>
+      </ScrollPane>
       </children></AnchorPane>
