--- a/src/main/resources/views/dbWorkViews/dbWork.fxml
+++ b/src/main/resources/views/dbWorkViews/dbWork.fxml
@@ -1,34 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import java.lang.String?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="500.0" prefWidth="717.0" styleClass="window_background" stylesheets="@../../styles/styles.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.dbControllers.DBWorkController">
+<AnchorPane fx:id="anchorPane" prefHeight="500.0" prefWidth="772.0" styleClass="window_background" stylesheets="@../../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.dbControllers.DBWorkController">
    <children>
-      <TableView fx:id="fuelTable" blendMode="MULTIPLY" layoutX="14.0" layoutY="37.0" prefHeight="318.0" prefWidth="321.0">
+      <TableView fx:id="fuelTable" blendMode="MULTIPLY" layoutX="14.0" layoutY="37.0" prefHeight="318.0" prefWidth="356.0">
         <columns>
           <TableColumn fx:id="columnName" prefWidth="155.0" text="Вид топлива" />
           <TableColumn fx:id="columnPrice" prefWidth="165.0" text="Цена (рублей за литр)" />
         </columns>
       </TableView>
-      <Button layoutX="75.0" layoutY="374.0" mnemonicParsing="false" onAction="#addFuel" prefHeight="58.0" prefWidth="89.0" text="Добавить">
+      <Button layoutX="92.0" layoutY="375.0" mnemonicParsing="false" onAction="#addFuel" prefHeight="58.0" prefWidth="89.0" text="Добавить">
          <styleClass>
             <String fx:value="button_restyling" />
             <String fx:value="button_restyling_bounds" />
          </styleClass></Button>
-      <Button layoutX="75.0" layoutY="419.0" mnemonicParsing="false" onAction="#changeFuel" prefHeight="58.0" prefWidth="89.0" text="Изменить">
+      <Button layoutX="92.0" layoutY="420.0" mnemonicParsing="false" onAction="#changeFuel" prefHeight="58.0" prefWidth="89.0" text="Изменить">
          <styleClass>
             <String fx:value="button_restyling" />
             <String fx:value="button_restyling_bounds" />
          </styleClass></Button>
-      <Button layoutX="75.0" layoutY="463.0" mnemonicParsing="false" onAction="#removeFuel" prefHeight="58.0" prefWidth="89.0" text="Удалить">
+      <Button layoutX="92.0" layoutY="464.0" mnemonicParsing="false" onAction="#removeFuel" prefHeight="58.0" prefWidth="89.0" text="Удалить">
          <styleClass>
             <String fx:value="button_restyling" />
             <String fx:value="button_restyling_bounds" />
          </styleClass></Button>
-      <TableView fx:id="carTable" blendMode="MULTIPLY" layoutX="359.0" layoutY="37.0" prefHeight="318.0" prefWidth="352.0">
+      <TableView fx:id="carTable" blendMode="MULTIPLY" layoutX="409.0" layoutY="37.0" prefHeight="318.0" prefWidth="356.0">
         <columns>
           <TableColumn fx:id="columnId" prefWidth="26.0" text="Id" />
           <TableColumn fx:id="columnModel" prefWidth="87.0" text="Модель" />
@@ -36,22 +38,22 @@
             <TableColumn fx:id="columnTankVolume" prefWidth="170.0" text="Объём бака (л)" />
         </columns>
       </TableView>
-      <Button layoutX="435.0" layoutY="374.0" mnemonicParsing="false" onAction="#addCar" prefHeight="30.0" prefWidth="200.0" text="Добавить">
+      <Button layoutX="489.0" layoutY="374.0" mnemonicParsing="false" onAction="#addCar" prefHeight="30.0" prefWidth="200.0" text="Добавить">
          <styleClass>
             <String fx:value="button_restyling" />
             <String fx:value="button_restyling_bounds" />
          </styleClass></Button>
-      <Button layoutX="435.0" layoutY="419.0" mnemonicParsing="false" onAction="#changeCar" prefHeight="26.0" prefWidth="200.0" text="Изменить">
+      <Button layoutX="489.0" layoutY="419.0" mnemonicParsing="false" onAction="#changeCar" prefHeight="26.0" prefWidth="200.0" text="Изменить">
          <styleClass>
             <String fx:value="button_restyling" />
             <String fx:value="button_restyling_bounds" />
          </styleClass></Button>
-      <Button layoutX="435.0" layoutY="463.0" mnemonicParsing="false" onAction="#removeCar" prefHeight="26.0" prefWidth="200.0" text="Удалить">
+      <Button layoutX="489.0" layoutY="463.0" mnemonicParsing="false" onAction="#removeCar" prefHeight="26.0" prefWidth="200.0" text="Удалить">
          <styleClass>
             <String fx:value="button_restyling" />
             <String fx:value="button_restyling_bounds" />
          </styleClass></Button>
-      <AnchorPane cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="723.0" styleClass="close_area" stylesheets="@../../styles/styles.css">
+      <AnchorPane cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="772.0" styleClass="close_area" stylesheets="@../../styles/styles.css">
          <children>
             <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
                <font>
@@ -60,10 +62,6 @@
             </Button>
          </children>
       </AnchorPane>
-      <Button layoutX="263.0" layoutY="374.0" mnemonicParsing="false" onAction="#updateTables" prefHeight="26.0" prefWidth="97.0" text="Обновить">
-         <styleClass>
-            <String fx:value="button_restyling" />
-            <String fx:value="button_restyling_bounds" />
-         </styleClass></Button>
+      <Button layoutX="339.0" layoutY="374.0" mnemonicParsing="false" onAction="#updateTables" prefHeight="26.0" prefWidth="97.0" styleClass="button_restyling" text="Обновить" />
    </children>
 </AnchorPane>
