--- a/src/main/resources/views/imitation.fxml
+++ b/src/main/resources/views/imitation.fxml
@@ -5,109 +5,122 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="anchorPane" prefHeight="500.0" prefWidth="1000.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ImitationController">
    <children>
-      <Button layoutX="14.0" layoutY="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" style="-fx-background-image: &quot;@pics/icons8-play-48.png&quot;;" stylesheets="@../styles/styles.css" wrapText="true">
-         <font>
-            <Font size="24.0" />
-         </font>
-         <styleClass>
-            <String fx:value="button_restyling" />
-            <String fx:value="button_play" />
-         </styleClass>
-      </Button>
-      <Button layoutX="84.0" layoutY="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" stylesheets="@../styles/styles.css" wrapText="true">
-         <font>
-            <Font size="16.0" />
-         </font>
-         <styleClass>
-            <String fx:value="button_restyling" />
-            <String fx:value="button_pause" />
-         </styleClass>
-      </Button>
-      <Button layoutX="154.0" layoutY="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" stylesheets="@../styles/styles.css" wrapText="true">
-         <font>
-            <Font name="Arial" size="26.0" />
-         </font>
-         <styleClass>
-            <String fx:value="button_restyling" />
-            <String fx:value="button_stop" />
-         </styleClass>
-      </Button>
-      <Button layoutX="10.0" layoutY="387.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="В конструктор" wrapText="true">
-         <font>
-            <Font size="17.0" />
-         </font>
-         <styleClass>
-            <String fx:value="button_restyling" />
-            <String fx:value="button_restyling_bounds" />
-         </styleClass>
-      </Button>
-      <Button layoutX="10.0" layoutY="425.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="В моделирование" wrapText="true">
-         <font>
-            <Font size="17.0" />
-         </font>
-         <styleClass>
-            <String fx:value="button_restyling" />
-            <String fx:value="button_restyling_bounds" />
-         </styleClass>
-      </Button>
-      <Button layoutX="10.0" layoutY="463.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="В меню" wrapText="true">
-         <font>
-            <Font size="17.0" />
-         </font>
-         <styleClass>
-            <String fx:value="button_restyling" />
-            <String fx:value="button_restyling_bounds" />
-         </styleClass>
-      </Button>
-      <Line endX="-47.0" endY="310.0" layoutX="267.0" layoutY="190.0" startX="-47.0" startY="-190.0" />
-      <Line endX="86.0" endY="315.0" layoutX="736.0" layoutY="186.0" startX="86.0" startY="-186.0" />
-      <Label layoutX="834.0" layoutY="82.0" styleClass="text" stylesheets="@../styles/styles.css" text="Информационное табло">
-         <font>
-            <Font size="17.0" />
-         </font>
-      </Label>
-      <TextArea fx:id="log_list" blendMode="MULTIPLY" disable="true" editable="false" layoutX="823.0" layoutY="111.0" prefHeight="268.0" prefWidth="177.0" />
-      <Label layoutX="875.0" layoutY="393.0" styleClass="text" stylesheets="@../styles/styles.css" text="Статистика">
-         <font>
-            <Font size="17.0" />
-         </font>
-      </Label>
-      <Label layoutX="834.0" layoutY="431.0" styleClass="text" stylesheets="@../styles/styles.css" text="Заправлено авто:">
-         <font>
-            <Font size="17.0" />
-         </font>
-      </Label>
-      <Label layoutX="834.0" layoutY="462.0" styleClass="text" stylesheets="@../styles/styles.css" text="Всего залито:">
-         <font>
-            <Font size="17.0" />
-         </font>
-      </Label>
-      <Label layoutX="834.0" layoutY="412.0" styleClass="text" stylesheets="@../styles/styles.css" text="Касса:">
-         <font>
-            <Font size="17.0" />
-         </font>
-      </Label>
-      <Label fx:id="cash_value_label" layoutX="969.0" layoutY="412.0" styleClass="text" stylesheets="@../styles/styles.css" text="0">
-         <font>
-            <Font size="17.0" />
-         </font>
-      </Label>
-      <Label fx:id="automobileCountLabel" layoutX="969.0" layoutY="431.0" styleClass="text" stylesheets="@../styles/styles.css" text="0">
-         <font>
-            <Font size="17.0" />
-         </font>
-      </Label>
-      <Label fx:id="fuelValueLabel" layoutX="969.0" layoutY="462.0" styleClass="text" stylesheets="@../styles/styles.css" text="0">
-         <font>
-            <Font size="17.0" />
-         </font>
-      </Label>
-      <AnchorPane cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="1001.0" styleClass="close_area" stylesheets="@../styles/styles.css">
+      <AnchorPane fx:id="threadButtons" layoutX="10.0" layoutY="40.0" prefHeight="50.0" prefWidth="120.0">
+         <children>
+            <Button fx:id="playButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" style="-fx-background-image: &quot;@pics/icons8-play-48.png&quot;;" stylesheets="@../styles/styles.css" wrapText="true">
+               <font>
+                  <Font size="24.0" />
+               </font>
+               <styleClass>
+                  <String fx:value="button_restyling" />
+                  <String fx:value="button_play" />
+               </styleClass>
+            </Button>
+            <Button fx:id="pauseButton" layoutX="60.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" stylesheets="@../styles/styles.css" wrapText="true">
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <styleClass>
+                  <String fx:value="button_restyling" />
+                  <String fx:value="button_pause" />
+               </styleClass>
+            </Button>
+            <Button fx:id="stopButton" layoutX="120.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" stylesheets="@../styles/styles.css" wrapText="true">
+               <font>
+                  <Font name="Arial" size="26.0" />
+               </font>
+               <styleClass>
+                  <String fx:value="button_restyling" />
+                  <String fx:value="button_stop" />
+               </styleClass>
+            </Button>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="backButtons" layoutX="10.0" layoutY="387.0">
+         <children>
+            <Button mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="В конструктор" wrapText="true">
+               <font>
+                  <Font size="17.0" />
+               </font>
+               <styleClass>
+                  <String fx:value="button_restyling" />
+                  <String fx:value="button_restyling_bounds" />
+               </styleClass>
+            </Button>
+            <Button layoutY="38.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="В моделирование" wrapText="true">
+               <font>
+                  <Font size="17.0" />
+               </font>
+               <styleClass>
+                  <String fx:value="button_restyling" />
+                  <String fx:value="button_restyling_bounds" />
+               </styleClass>
+            </Button>
+            <Button layoutY="76.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="В меню" wrapText="true">
+               <font>
+                  <Font size="17.0" />
+               </font>
+               <styleClass>
+                  <String fx:value="button_restyling" />
+                  <String fx:value="button_restyling_bounds" />
+               </styleClass>
+            </Button>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="log_list_anchorPane" layoutX="824.0" layoutY="40.0" prefHeight="196.0" prefWidth="177.0">
+         <children>
+            <Label layoutX="10.0" styleClass="text" stylesheets="@../styles/styles.css" text="Информационное табло">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <TextArea fx:id="log_list" blendMode="MULTIPLY" disable="true" editable="false" layoutY="25.0" prefHeight="268.0" prefWidth="177.0" />
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="statistics" layoutX="841.0" layoutY="353.0" prefHeight="87.0" prefWidth="143.0">
+         <children>
+            <Label layoutX="41.0" styleClass="text" stylesheets="@../styles/styles.css" text="Статистика">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label layoutY="38.0" styleClass="text" stylesheets="@../styles/styles.css" text="Заправлено авто:">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label layoutY="69.0" styleClass="text" stylesheets="@../styles/styles.css" text="Всего залито:">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label layoutY="19.0" styleClass="text" stylesheets="@../styles/styles.css" text="Касса:">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label fx:id="cash_value_label" layoutX="135.0" layoutY="19.0" styleClass="text" stylesheets="@../styles/styles.css" text="0">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label fx:id="automobileCountLabel" layoutX="135.0" layoutY="38.0" styleClass="text" stylesheets="@../styles/styles.css" text="0">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+            <Label fx:id="fuelValueLabel" layoutX="135.0" layoutY="69.0" styleClass="text" stylesheets="@../styles/styles.css" text="0">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="dragableArea" cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="1004.0" styleClass="close_area" stylesheets="@../styles/styles.css">
          <children>
             <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" styleClass="button_close" stylesheets="@../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
                <font>
