--- a/src/main/resources/views/downloadTopology.fxml
+++ b/src/main/resources/views/downloadTopology.fxml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="296.0" prefWidth="186.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DownloadTopologyController">
+<AnchorPane prefHeight="272.0" prefWidth="254.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DownloadTopologyController">
    <children>
-      <TableView fx:id="tableView" layoutY="48.0" prefHeight="200.0" prefWidth="186.0">
+      <TableView fx:id="tableView" blendMode="MULTIPLY" layoutX="6.0" layoutY="28.0" prefHeight="207.0" prefWidth="241.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
         <columns>
-          <TableColumn fx:id="columnName" prefWidth="199.0" text="Название топологии" />
+          <TableColumn fx:id="columnName" prefWidth="230.0" text="Название топологии" />
         </columns>
       </TableView>
-      <Button layoutX="58.0" layoutY="257.0" fx:id="button" mnemonicParsing="false" onAction="#selectTopology" prefHeight="25.0" prefWidth="71.0" text="ОК" />
+      <Button fx:id="button" layoutX="27.0" layoutY="228.0" mnemonicParsing="false" onAction="#selectTopology" prefHeight="25.0" prefWidth="71.0" text="ОК">
+         <styleClass>
+            <String fx:value="button_restyling_bounds" />
+            <String fx:value="button_restyling" />
+         </styleClass></Button>
    </children>
 </AnchorPane>
