--- a/src/main/resources/views/saveTopology.fxml
+++ b/src/main/resources/views/saveTopology.fxml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="129.0" prefWidth="222.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SaveTopologyController">
+<AnchorPane prefHeight="129.0" prefWidth="222.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SaveTopologyController">
    <children>
-      <TextField layoutX="14.0" layoutY="30.0" fx:id="textField" prefHeight="25.0" prefWidth="194.0" promptText="Введите название топологии..." />
-      <Button layoutX="80.0" layoutY="79.0" fx:id="button" onAction="#save" mnemonicParsing="false" prefHeight="25.0" prefWidth="62.0" text="ОК" />
+      <TextField fx:id="textField" blendMode="MULTIPLY" layoutX="11.0" layoutY="26.0" prefHeight="25.0" prefWidth="194.0" promptText="Введите название топологии..." styleClass="button_restyling_bounds" />
+      <Button fx:id="button" layoutX="11.0" layoutY="79.0" mnemonicParsing="false" onAction="#save" prefHeight="25.0" prefWidth="62.0" text="ОК">
+         <styleClass>
+            <String fx:value="button_restyling_bounds" />
+            <String fx:value="button_restyling" />
+         </styleClass></Button>
    </children>
 </AnchorPane>
